# CFD

./: .gitignore  BTCS.cc  CMakeLists.txt  CNTCS.cc  CRWENO5.cc  Euler_hllc.cc  Euler_roe.cc  Euler_rusanov.cc  FTCS.cc  FluxSplitting.cc  Poisson_CG.cc  Poisson_FFT.cc  Poisson_GaussSeidel.cc  Poisson_Multigrid.cc  README.md  RK2.cc  RK3.cc  RK4.cc  Riemann.cc  WENO5.cc  hello_fftw3.cc  matplotlibrc  readu.py  start.sh
include/: 1D_BTCS.hh
src/: 1D_BTCS.cc  1D_CrankNicolson.cc  1D_FTCS.cc  1D_RK2.cc  1D_RK3.cc  1D_RK4.cc  Burgers_CRWENO_Dirichlet.cc  Burgers_FluxSplitting_period.cc  Burgers_Riemann_period.cc  Burgers_WENO5_Dirichlet.cc  CRWENO_Dirichlet.cc  Euler_HLLC.cc  Euler_roe.cc  Euler_rusanov.cc  Poisson_CG.cc  Poisson_FFT.cc  Poisson_GaussSeidel.cc  Poisson_Multigrid.cc  WENO5_Dirichlet.cc  algebraicEqs.cc
